hphp/test/zend/bad/ext/soap/tests/interop/Round2/GroupB/r2_groupB_005p.php
<?php
$param = (object)array(
  'varString'=>'arg',
  'varInt'=>34,
  'varFloat'=>325.325,
  'varArray' => array('red','blue','green'));
$client = new SoapClient(NULL,array("location"=>"test://","uri"=>"http://soapinterop.org/","trace"=>1,"exceptions"=>0));
$client->__soapCall("echoNestedArray", array($param), array("soapaction"=>"http://soapinterop.org/","uri"=>"http://soapinterop.org/"));
echo $client->__getlastrequest();
$HTTP_RAW_POST_DATA = $client->__getlastrequest();
include("round2_groupB.inc");
echo "ok\n";
?>